fix mobile video alignment

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -91,6 +91,7 @@
 
   @media (max-width: $breakpoint-small) {
     padding: var(--spacing-xs);
+    padding-top: 0;
   }
 }
 
